# ssi-img

./: .gitignore  CMakeLists.txt  LICENSE  README.md  bmp.h  bmp2img-cga.c  bmp2img-ega.c  bmp2img.c  img2bmp.c  ssi-img-version.in
executables/: bmp2bin.c  bmp2img-cga.c  bmp2img-ega.c  img2bmp.c
include/: bmp.h  pal-tools.h  util.h
quickbmp/: bmp.c  bmp_int.h
src/: bmp2img-cga.c  bmp2img-ega.c  img2bmp.c
ssi-img/: CMakeLists.txt
ssi-img/include/: memstream.h  pal.h  ssi-img.h
ssi-img/src/: interlaced.c  planar.c  ssi-img.c
tools/: pal-tools.c  util.c
